--- a/geolocation-web-application/location-info.html
+++ b/geolocation-web-application/location-info.html
@@ -7,16 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./public/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./src/styles/styles.css">
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="./src/scripts/scripts.js" defer></script>
+      
       
   </head>
   <body>
     <header>
       <div class="header-content">
-        <img src="/images/logo.png" alt="IP Address Image Representation" width="40" height="40">
+        <img src="./public/images/logo.png" alt="IP Address Image Representation" width="40" height="40">
       </div>
     </header>
     <main>
@@ -35,16 +34,13 @@
                 <p>Country: </p>
                 <p>City: </p>
                 <p>Location: </p>
-                <p>ISP: </p>
+                <p>Internet Service Provider: </p>
             </div>
 
             <div class="location-info-map">
 
             </div>
-
         </div>
-    </main>
-   
-  
+    </main>  
   </body>
 </html>
