--- a/index.html
+++ b/index.html
@@ -1,37 +1,150 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Geolocation Web Application | Home</title>
+    <title>IP Insight Tracker | Location & IP Information</title>
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+
+    <!-- Scripts -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="./src/scripts/scripts.js" defer></script>
+
+    <!-- Loading Overlay -->
+    <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(244, 241, 222, 0.9); justify-content: center; align-items: center; z-index: 9999;">
+      <div style="text-align: center;">
+        <div style="width: 50px; height: 50px; border: 4px solid #264653; border-top: 4px solid transparent; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 20px;"></div>
+        <p>Loading...</p>
+      </div>
+    </div>
+
+    <style>
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    </style>
   </head>
+
   <body>
     <header>
       <div class="header-content">
-        <img src="/images/logo.png" alt="IP Address Image Representation" width="40" height="40">
+        <div class="logo-container">
+          <img src="/images/logo.png" alt="IP Insight Logo" width="40" height="40">
+          <span class="logo-text">IP Insight</span>
+        </div>
+        <nav>
+          <a href="index.html" class="nav-link active">Home</a>
+          <a href="recent-searches.html" class="nav-link">Recent</a>
+        </nav>
       </div>
     </header>
 
     <main>
-        <div class="home-information-form">
-            <h1>Get Your Location Info</h1>
-            <form class="home-information" action="location-info.html">
-                <label>IP Address
-                    <input type="text" id="ipInput" placeholder="Enter ip address" required> <!-- Added id="ipInput" -->
-                </label>
-                <input type="button" id="getInfoBtn" value="Get info"> <!-- Added id="getInfoBtn" -->
+      <div class="hero-section">
+        <div class="hero-content">
+          <h1 class="hero-title">
+            <span class="title-gradient">Discover Your Digital Footprint</span>
+          </h1>
+          <p class="hero-subtitle">Get detailed insights about your IP address, location, and internet service provider</p>
+          
+          <div class="search-card">
+            <form class="ip-search-form" id="ipSearchForm">
+              <div class="input-group">
+                <input 
+                  type="text" 
+                  id="ipInput" 
+                  placeholder="Enter IP address (e.g., 8.8.8.8) or leave blank for your IP" 
+                  pattern="^([0-9]{1,3}\.){3}[0-9]{1,3}$|^([0-9a-fA-F]{1,4}:){7}[0-9a-fA-F]{1,4}$"
+                  title="Enter a valid IPv4 or IPv6 address"
+                >
+                <button type="button" class="search-btn" id="getInfoBtn">
+                  <span class="btn-text">Analyze IP</span>
+                  <span class="btn-icon">→</span>
+                </button>
+              </div>
             </form>
-            <p style="margin-top: 1vh;">
-              <a href="#" id="detectPublicIP">I don't know my public IP — detect it for me</a>
-            </p>
+            
+            <div class="quick-actions">
+              <button class="quick-btn" id="detectPublicIP">
+                <span class="btn-icon">📡</span>
+                Detect My IP
+              </button>
+              <button class="quick-btn" id="useCurrentLocation">
+                <span class="btn-icon">📍</span>
+                Use My Location
+              </button>
+            </div>
+          </div>
+
+          <div class="features-grid">
+            <div class="feature-card">
+              <div class="feature-icon">🗺️</div>
+              <h3>Precise Location</h3>
+              <p>Get accurate city and country information with interactive maps</p>
+            </div>
+            <div class="feature-card">
+              <div class="feature-icon">🌐</div>
+              <h3>ISP Details</h3>
+              <p>Discover your internet service provider and network information</p>
+            </div>
+            <div class="feature-card">
+              <div class="feature-icon">⏰</div>
+              <h3>Timezone Info</h3>
+              <p>View local time and timezone data for any IP location</p>
+            </div>
+          </div>
         </div>
+      </div>
     </main>
+
+    <!-- Notification Toast -->
+    <div class="toast" id="toast"></div>
+
+    <script>
+      // Event listener for Analyze IP button
+      const ipInput = document.getElementById("ipInput");
+      const getInfoBtn = document.getElementById("getInfoBtn");
+
+      getInfoBtn.addEventListener("click", function () {
+        const ip = ipInput.value.trim();
+
+        if (ip) {
+          const ipRegex = /^([0-9]{1,3}\.){3}[0-9]{1,3}$/;
+          if (!ipRegex.test(ip)) {
+            alert("Please enter a valid IP address format (e.g., 8.8.8.8)");
+            return;
+          }
+
+          sessionStorage.setItem("selectedIP", ip);
+
+          const overlay = document.getElementById("loadingOverlay");
+          if (overlay) overlay.style.display = "flex";
+
+          setTimeout(() => {
+            window.location.href = "location-info.html";
+          }, 500);
+        } else {
+          alert("Please enter an IP address");
+        }
+      });
+
+      // Support Enter key
+      ipInput.addEventListener("keypress", function (e) {
+        if (e.key === "Enter") {
+          e.preventDefault();
+          getInfoBtn.click();
+        }
+      });
+    </script>
   </body>
 </html>
