--- a/location-info.html
+++ b/location-info.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
      <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="./src/scripts/scripts.js" defer></script>
+    <!--<script src="./src/scripts/scripts.js" defer></script>-->
   </head>
   <body>
     <!-- Loading Animation -->
