--- a/recent-searches.html
+++ b/recent-searches.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/styles.css">
-     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <script src="./src/scripts/recent-searches.js" defer></script>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <!--<script src="./src/scripts/recent-searches.js" defer></script>-->
   </head>
   <body>
     <header>
