--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <!--<script src="/src/scripts/scripts.js" defer></script>-->
+    <script src="/src/scripts/scripts.js" defer></script>
 
     <!-- Loading Overlay -->
     <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(244, 241, 222, 0.9); justify-content: center; align-items: center; z-index: 9999;">
