Modified the error for not found on remote servers but being found on local machine

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
 
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -39,7 +39,7 @@
     <header>
       <div class="header-content">
         <div class="logo-container">
-          <img src="/images/logo.png" alt="IP Insight Logo" width="40" height="40">
+          <img src="public/images/logo.png" alt="IP Insight Logo" width="40" height="40">
           <span class="logo-text">IP Insight</span>
         </div>
         <nav>
