--- a/recent-searches.html
+++ b/recent-searches.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/styles/styles.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/styles/styles.css">
+    <link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
      <script src="https://lawson-mutsa.github.io/geolocation-web-app/src/scripts/scripts.js" defer></script>
   </head>
   <body>
@@ -16,7 +16,7 @@
       <div class="header-content">
         <div class="logo-container">
           <a href="index.html" class="logo-link">
-            <img src="/images/logo.png" alt="IP Insight Logo" width="40" height="40">
+            <img src="public/images/logo.png" alt="IP Insight Logo" width="40" height="40">
             <span class="logo-text">IP Insight</span>
           </a>
         </div>
