Removed scripts source from remote server

--- a/recent-searches.html
+++ b/recent-searches.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
-     <script src="https://lawson-mutsa.github.io/geolocation-web-app/src/scripts/scripts.js" defer></script>
+     <script src="src/scripts/scripts.js" defer></script>
   </head>
   <body>
     <header>
