--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                 <span class="btn-icon">📡</span>
                 Detect My IP
               </button>
-              <button class="quick-btn" id="useCurrentLocation">
+              <!--<button class="quick-btn" id="useCurrentLocation">
                 <span class="btn-icon">📍</span>
                 Use My Location
-              </button>
+              </button>-->
             </div>
           </div>
 
